flex/flex-tests/testData/flexUnit/highlighting/SuiteWithWrongCustomRunner.as
package {
[Suite]
[RunWith("<error descr="Expected class org.flexunit.runner.IRunner or descendant">WrongCustomRunner</error>")]
public class SuiteWithWrongCustomRunner {
}
}